# forecise

./: .env.example  .gitignore  Cargo.toml  Forecise_PRD_v1.docx  README.md  docker-compose.yml
crates/api/: Cargo.toml
crates/api/src/: cache.rs  main.rs  state.rs
crates/api/src/handlers/: accuracy.rs  alerts.rs  ask.rs  briefing.rs  consensus.rs  health.rs  markets.rs  mod.rs  movements.rs  whales.rs
crates/consensus/: Cargo.toml
crates/consensus/src/: brier.rs  engine.rs  lib.rs
crates/shared/: Cargo.toml
crates/shared/src/: config.rs  error.rs  lib.rs  models.rs
crates/workers/: Cargo.toml
crates/workers/src/: briefing.rs  consensus_worker.rs  ingestion.rs  main.rs  movement.rs
crates/workers/src/sources/: manifold.rs  metaculus.rs  mod.rs  polymarket.rs
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/ask/: page.tsx
frontend/src/app/briefing/: page.tsx
frontend/src/app/leaderboard/: page.tsx
frontend/src/app/markets/: page.tsx
frontend/src/app/markets/[id]/: page.tsx
frontend/src/components/: ConsensusCard.tsx  LeaderboardTable.tsx  MarketCard.tsx  OddsChart.tsx
frontend/src/lib/: api.ts
migrations/: init.sql
