[package]
name = "forecise-consensus"
version.workspace = true
edition.workspace = true

[dependencies]
forecise-shared = { path = "../shared" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
bigdecimal = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
