[package]
name = "forecise-workers"
version.workspace = true
edition.workspace = true

[dependencies]
forecise-shared = { path = "../shared" }
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
redis = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
dotenvy = { workspace = true }
url = { workspace = true }
futures = { workspace = true }
bigdecimal = { workspace = true }
